--- a/index.html
+++ b/index.html
@@ -15,18 +15,27 @@
 </head>
 <body>
   <ul id="slide-out" class="side-nav">
-    <li><a href="#!">Second Link</a></li>
+    <li><a href="index.html">Home</a></li>
     <li><div class="divider"></div></li>
-    <li><a class="subheader">Subheader</a></li>
-    <li><a class="waves-effect" href="#!">Third Link With Waves</a></li>
+    <li><a href="about.html" class="subheader">About Us</a></li>
+    <li><a class="waves-effect" href="login.html">Login</a></li>
+    <li><a class="waves-effect" href="#!">CIO</a></li>
+    <li><a class="waves-effect" href="#!">CTO</a></li>
+    <li><a class="waves-effect" href="#!">Career Moves</a></li>
+    <li><a class="waves-effect" href="#!">Community</a></li>
+    <li><a class="waves-effect" href="#!">Magazines</a></li>
+    <li><a class="waves-effect" href="#!">Events</a></li>
+    <li><a class="waves-effect" href="#!">Webinars</a></li>
+    <li><a class="waves-effect" href="#!">Bloggers</a></li>
   </ul>
   <nav>
     <div class="nav-wrapper">
-      <a href="#!" data-activates="slide-out" class=" left brand-logo button-collapse"><i class="material-icons">menu</a>
+      <a href="#!" data-activates="slide-out" class=" left brand-logo button-collapse"><i class="material-icons">menu</i></a>
       <img class="center-align" style="margin-left:20%;margin-top:2%" src="logo.jpg">
 
     </div>
-  </nav>      
+  </nav>
+       
 	<script type="text/javascript" src="js/jquery-2.1.1.min.js"></script>
 	<script type="text/javascript" src="js/materialize.min.js"></script>
 	<script type="text/javascript" src="js/init.js"></script> 	
